--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,149 +7,87 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <Button
+        android:id="@+id/ButtonSpin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1.0"
-        tools:ignore="MissingConstraints">
-
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:id="@+id/spinwheel"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_carksekiz"
-            android:adjustViewBounds="true"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            />
-
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/sorular"
-            android:background="@drawable/ic_butsoru"
-            android:text="?"
-            android:textSize="70dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/kelimeler"
-            android:background="@drawable/ic_butsoru"
-            android:text="W"
-            android:textSize="65dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"/>
-
-
-
-
-
-
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ButtonSpin"
-            android:background="@drawable/ic_eksi"
-            android:layout_centerHorizontal="true"
-            android:onClick="onClickButtonRotation"
-            android:layout_centerVertical="true"
-            android:text="spın"
-            android:textSize="30dp"
-            android:textStyle="bold"></Button>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageSelect"
-            android:src="@drawable/ic_select"
-            android:layout_marginLeft="340dp"
-            android:layout_centerVertical="true"></ImageView>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonUp"
-            android:background="@drawable/ic_eksi"
-            android:layout_alignParentRight="false"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="false"
-            android:layout_marginTop="500dp"
-            android:text="+"
-            android:onClick="buttonUp"
-            android:textSize="80dp"
-            android:textAlignment="gravity"
-            android:gravity="center_horizontal"></Button>
-
-
-
-
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonDown"
-            android:background="@drawable/ic_eksi"
-            android:layout_marginTop="500dp"
-            android:text="-"
-            android:textSize="80dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="false"
-            android:textAlignment="gravity"
-            android:gravity="center_horizontal"
-            android:onClick="buttonDown"
-
-            />
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </RelativeLayout>
+        android:background="@drawable/ic_eksi"
+        android:onClick="onClickButtonRotation"
+        android:text="spın"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/spinwheel"
+        app:layout_constraintEnd_toEndOf="@+id/spinwheel"
+        app:layout_constraintStart_toStartOf="@+id/spinwheel"
+        app:layout_constraintTop_toTopOf="@+id/spinwheel"></Button>
+
+    <ImageView
+        android:id="@+id/spinwheel"
+        android:layout_width="359dp"
+        android:layout_height="357dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/ic_carksekiz"
+        app:layout_constraintBottom_toTopOf="@+id/buttonDown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sorular" />
+
+    <ImageView
+        android:id="@+id/imageSelect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:src="@drawable/ic_select"
+        app:layout_constraintBottom_toBottomOf="@+id/ButtonSpin"
+        app:layout_constraintStart_toEndOf="@+id/ButtonSpin"
+        app:layout_constraintTop_toTopOf="@+id/ButtonSpin"></ImageView>
+
+    <Button
+        android:id="@+id/buttonUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_eksi"
+        android:gravity="center_horizontal"
+        android:onClick="buttonUp"
+        android:text="+"
+        android:textAlignment="gravity"
+        android:textSize="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"></Button>
+
+    <Button
+        android:id="@+id/kelimeler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_butsoru"
+        android:text="W"
+        android:textSize="65dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonDown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_eksi"
+        android:gravity="center_horizontal"
+        android:onClick="buttonDown"
+        android:text="-"
+        android:textAlignment="gravity"
+        android:textSize="80dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/sorular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_butsoru"
+        android:text="?"
+        android:textSize="70dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
